--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
     <!--BootStrap 4-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
+    <!--Google Font-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,300&display=swap">
+    
     <!--Font Awesome Emojis/Icons-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!--Custom CSS Files-->
     <link rel="stylesheet" href="src/css/scroll.css" type="text/css">
     <link rel="stylesheet" href="src/css/website.css" type="text/css">
+    <link rel="stylesheet" href="src/css/main.css" type="text/css">
 
     <!--Web Page Title-->
     <title>Rocky Kuang</title>
@@ -30,7 +34,36 @@
     <div class="arrow arrow-2"></div>
 
     <!-- Navigation Bar -->
+    <nav id="mainNavbar" class="navbar navbar-dark bg-dark navbar-expand-md">
+        
+        <a href="#" class="navbar-brand">
+            <img src="src/images/icon.png" width="30" height="30" class="d-inline-block align-top" alt="pageIcon">
+            Rocky Kuang
+        </a>
 
+        <button class = "navbar-toggler" data-toggle="collapse" data-target="#navLinks">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div id="navLinks" class = "collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="https://www.linkedin.com/in/rocky-kuang/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i> Linkedin</a>
+                </li>
+                <li class="nav-item">
+                    <a href="https://github.com/RockyLogic" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i> GitHub</a>
+                </li>
+            </ul>
+
+            <ul class="navbar-nav ml-auto">
+                <li class="navTabs"><a href="#home">Home</a></li>
+                <li class="navTabs"><a href="#about">About</a></li>
+                <li class="navTabs"><a href="#portfolio">Portfolio</a></li>
+                <li class="navTabs"><a href="#">Resume</a></li>
+                <li class="navTabs"><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
 
 
 
