📢 Finished About Page

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
     <!--Custom CSS Files-->
     <link rel="stylesheet" href="src/css/scroll.css" type="text/css">
-    <!--<link rel="stylesheet" href="src/css/website.css" type="text/css"-->
     <link rel="stylesheet" href="src/css/main.css" type="text/css">
     <link rel="stylesheet" href="src/css/nav.css" type="text/css">
     <link rel="stylesheet" href="src/css/home.css" type="text/css">
+    <link rel="stylesheet" href="src/css/about.css" type="text/css">
 
 
     <!--Web Page Title-->
@@ -85,10 +85,10 @@
     </nav>
 
     <!--Home Page-->
-    <section class="home" id="home">
+    <section id="home" class="home">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-12 d-flex ">
+                <div class="col-sm-12">
                     <div class="profile">
                         <img class="profileImage" src="https://media-exp1.licdn.com/dms/image/C5603AQG3LDuajVlL7Q/profile-displayphoto-shrink_200_200/0?e=1588204800&v=beta&t=elSwWdPlL6mf6rkUAhISg5V4fdQfN_TzD3MVdt_Wzdo ">
                         <h1><strong>Rocky Kuang</strong></h1>
@@ -100,6 +100,52 @@
         </div>
     </section>
 
+    <!--About Page-->
+    <section id="about" class="about">
+        <div class="container">
+            <div class="row">
+
+                <!--Left Side of About-->
+                <div class="col-lg-6 aboutContent">
+                    <div class="aboutInfo">
+                        <h1 class="aboutTitle"><strong>About Me!</strong></h1>
+                        <hr class="aboutHR">
+                        <p>Greetings! I am a first-year university student at Ryerson University pursuing a Bachelor of
+                            Computer Science. I'm currently interested in web development and am an aspiring full-stack
+                            web developer. Currently focused on back-end
+                            web development. 🙂
+                            <br>
+                            <br> 
+                            I am knowledgeable in a few languages specifically; Python, Java, HTML5, and CSS3. 📝.
+                            I have some experience with Selenium, Regular Expressions, Web Requests, Bootstrap3, 
+                            Bootstrap 4, Multi-Treading, as well as Asynchrony! 📖
+                            <br>
+                            <br> 
+                            Currently learning: JavaScript, and MongoDB 📚
+                            <br>
+                            <br>
+                            GPA (4.33 System): 4.08
+                            <br>
+                            <br>
+                            Located: Toronto, ON, Canada 
+                        </p>
+                
+                        <!--About Footer Links-->
+                        <div>
+                            <div>My Socials: </div>
+                            <a class="aboutLinks" href="https://www.linkedin.com/in/rocky-kuang/ " target="_blank"><i class="fa fa-linkedin-square fa-lg " aria-hidden="true "></i></a>
+                            <a class="aboutLinks" href="https://github.com/RockyLogic" target="_blank"><i class="fa fa-github-square fa-lg " aria-hidden="true "></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <!--Right Side of About-->
+                <div class="col-lg-6 d-none d-lg-block">
+                    <img class="img-fluid aboutImage" src="src/images/toronto.jpg">
+                </div>
+            </div>
+        </div>
+    </section>
     <!--Java Script-->
     <!--1.jQuery, 2.Popper.js, 3.BootStrap JS-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
