⚙ Fixed Formating About

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
         <!--Signature at the top Left-->
         <a href="#" class="navbar-brand">
-            <img src="src/images/icon.png" width="30" height="30" class="d-inline-block align-top" alt="pageIcon">
+            <img src="src/images/icon.png" width="30" height="30" class="align-middle" alt="pageIcon">
             Rocky Kuang
         </a>
 
@@ -91,9 +91,11 @@
                 <div class="col-sm-12">
                     <div class="profile">
                         <img class="profileImage" src="https://media-exp1.licdn.com/dms/image/C5603AQG3LDuajVlL7Q/profile-displayphoto-shrink_200_200/0?e=1588204800&v=beta&t=elSwWdPlL6mf6rkUAhISg5V4fdQfN_TzD3MVdt_Wzdo ">
-                        <h1><strong>Rocky Kuang</strong></h1>
-                        <h3>Computer Science Student</h3>
-                        <h3>Ryerson University</h3>
+                        <div>
+                            <h1><strong>Rocky Kuang</strong></h1>
+                            <h3>Computer Science Student</h3>
+                            <h3>Ryerson University</h3>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -123,7 +125,6 @@
                             <br> 
                             Currently learning: JavaScript, and MongoDB 📚
                             <br>
-                            <br>
                             GPA (4.33 System): 4.08
                             <br>
                             <br>
@@ -140,7 +141,7 @@
                 </div>
 
                 <!--Right Side of About-->
-                <div class="col-lg-6 d-none d-lg-block">
+                <div class="col-lg-6 d-none d-flex align-items-center">
                     <img class="img-fluid aboutImage" src="src/images/toronto.jpg">
                 </div>
             </div>
