⚙ Error With About Image Formating Fixed

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="src/css/nav.css" type="text/css">
     <link rel="stylesheet" href="src/css/home.css" type="text/css">
     <link rel="stylesheet" href="src/css/about.css" type="text/css">
+    <link rel="stylesheet" href="src/css/portfolio.css" type="text/css">
 
 
     <!--Web Page Title-->
@@ -141,12 +142,31 @@
                 </div>
 
                 <!--Right Side of About-->
-                <div class="col-lg-6 d-none d-flex align-items-center">
+                <div class="col-lg-6 d-none d-lg-flex align-items-center">
                     <img class="img-fluid aboutImage" src="src/images/toronto.jpg">
                 </div>
             </div>
         </div>
     </section>
+
+    <!--Portfolio-->
+    <section id="portfolio" class="portfolio">
+        <div class="container">
+
+            <hr>
+            <h1 class="text-center"><strong>Portfolio</strong></h1>
+            <hr>
+
+            <div class="row">
+                <div class="col-12">
+
+
+
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!--Java Script-->
     <!--1.jQuery, 2.Popper.js, 3.BootStrap JS-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
