⚙ Portfolio Structure Complete

--- a/index.html
+++ b/index.html
@@ -155,14 +155,35 @@
 
             <hr>
             <h1 class="text-center"><strong>Portfolio</strong></h1>
-            <hr>
+            <hr style="padding-bottom:5vh">
 
-            <div class="row">
-                <div class="col-12">
-
-
-
+            <div class="row d-flex justify-content-lg-center">
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" style="background-color: aqua; height: 400px; width: 100%;">
+                    <div style="height: 250px; width: 200px; background-color: black;"></div>
+                    <div style="height: 150px; width: 200px; background-color: green;">rwarara </div>
                 </div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" style="background-color: yellow; height: 400px; width: 100%;">
+                    <div style="height: 250px; width: 200px; background-color: black;"></div>
+                    <div style="height: 150px; width: 200px; background-color: green;">rwarara </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" style="background-color: red; height: 400px; width: 100%;">
+                    <div style="height: 250px; width: 200px; background-color: black;"></div>
+                    <div style="height: 150px; width: 200px; background-color: green;">rwarara </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" style="background-color: purple; height: 400px; width: 100%;">
+                    <div style="height: 250px; width: 200px; background-color: black;"></div>
+                    <div style="height: 150px; width: 200px; background-color: green;">rwarara </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" style="background-color: blue; height: 400px; width: 100%;">
+                    <div style="height: 250px; width: 200px; background-color: black;"></div>
+                    <div style="height: 150px; width: 200px; background-color: green;">rwarara </div>
+                </div>
+
+                <!--<div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center" style="background-color: greenyellow; height: 100px;"><div style="height: 100%; width: 100px; background-color: black;"></div></div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center" style="background-color: blue; height: 100px;"><div style="height: 100%; width: 100px; background-color: black;"></div></div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center" style="background-color: purple; height: 100px;"><div style="height: 100%; width: 100px; background-color: black;"></div></div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center" style="background-color: red; height: 100px;"><div style="height: 100%; width: 100px; background-color: black;"></div></div>
+                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center" style="background-color: yellow; height: 100px;"><div style="height: 100%; width: 100px; background-color: black;"></div></div>-->
             </div>
         </div>
     </section>
