--- a/index.html
+++ b/index.html
@@ -153,37 +153,104 @@
     <section id="portfolio" class="portfolio">
         <div class="container">
 
-            <hr>
+            <!--Portfolio Title-->
+            <hr style="margin-bottom: 5%;">
             <h1 class="text-center"><strong>Portfolio</strong></h1>
-            <hr style="padding-bottom:5vh">
+            <hr style="margin-bottom:5%; width: 25%">
 
+            <!--Projects-->
             <div class="row d-flex justify-content-lg-center">
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" style="background-color: aqua; height: 400px; width: 100%;">
-                    <div style="height: 250px; width: 200px; background-color: black;"></div>
-                    <div style="height: 150px; width: 200px; background-color: green;">rwarara </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" style="background-color: yellow; height: 400px; width: 100%;">
-                    <div style="height: 250px; width: 200px; background-color: black;"></div>
-                    <div style="height: 150px; width: 200px; background-color: green;">rwarara </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" style="background-color: red; height: 400px; width: 100%;">
-                    <div style="height: 250px; width: 200px; background-color: black;"></div>
-                    <div style="height: 150px; width: 200px; background-color: green;">rwarara </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" style="background-color: purple; height: 400px; width: 100%;">
-                    <div style="height: 250px; width: 200px; background-color: black;"></div>
-                    <div style="height: 150px; width: 200px; background-color: green;">rwarara </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" style="background-color: blue; height: 400px; width: 100%;">
-                    <div style="height: 250px; width: 200px; background-color: black;"></div>
-                    <div style="height: 150px; width: 200px; background-color: green;">rwarara </div>
-                </div>
 
-                <!--<div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center" style="background-color: greenyellow; height: 100px;"><div style="height: 100%; width: 100px; background-color: black;"></div></div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center" style="background-color: blue; height: 100px;"><div style="height: 100%; width: 100px; background-color: black;"></div></div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center" style="background-color: purple; height: 100px;"><div style="height: 100%; width: 100px; background-color: black;"></div></div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center" style="background-color: red; height: 100px;"><div style="height: 100%; width: 100px; background-color: black;"></div></div>
-                <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center" style="background-color: yellow; height: 100px;"><div style="height: 100%; width: 100px; background-color: black;"></div></div>-->
+                <!--MultiThreaded Discord Joiner-->
+                <a href="https://github.com/RockyLogic/Multithreaded-Discord-Joiner" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
+                    <div class="project">
+                        <img src="src/images/discord.jpg" alt="MultiThreaded Discord Joiner" class="projectImage">
+                        <div class="projectDescription">
+                            <p>
+                                <strong>Multi-Threaded Discord Joiner:</strong>
+                                <br>
+                                Using web requests and multi-threading to join a discord server with multiple accounts
+                                through the use of discord tokens.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+
+                <!--Discord Link Opener-->
+                <a href="https://github.com/RockyLogic/Discord-Link-Opener" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
+                    <div class="project">
+                        <img src="src/images/discord.jpg" alt="Discord Link Opener" class="projectImage">
+                        <div class="projectDescription">
+                            <p>
+                                <strong>Discord Link Opener:</strong>
+                                <br>
+                                Using Discord-Self botting, detect links in messages with regular expressions, and
+                                navigates to webpage with native browser.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+
+                <!--Discord Link Opener-->
+                <a href="https://github.com/RockyLogic/Discord-Screenshot-Bot" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
+                    <div class="project">
+                        <img src="src/images/discord.jpg" alt="Discord ScreenShot" class="projectImage">
+                        <div class="projectDescription">
+                            <p>
+                                <strong>Discord ScreenShot Bot</strong>
+                                <br>
+                                A Discord bot which, sends a screenshot of any web page through the use of selenium
+                                (Basis for other projects).
+                            </p>
+                        </div>
+                    </div>
+                </a>
+
+                <!--Sneaker Gallery-->
+                <a href="https://github.com/RockyLogic/Personal-Sneaker-Gallery" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
+                    <div class="project">
+                        <img src="src/images/html&css.png" alt="Sneaker Gallery" class="projectImage">
+                        <div class="projectDescription">
+                            <p>
+                                <strong>Sneaker Gallary</strong>
+                                <br>
+                                First webpage project using HTML5 and CSS3! Created a webpage to display my collection
+                                of sneakers!
+                            </p>
+                        </div>
+                    </div>
+                </a>
+
+                <!--Discord OCR Bot-->
+                <a href="https://github.com/RockyLogic/Discord-OCR-Bot" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
+                    <div class="project">
+                        <img src="src/images/PyTesseract.png" alt="Discord OCR Bot" class="projectImage">
+                        <div class="projectDescription">
+                            <p>
+                                <strong>Discord OCR Bot</strong>
+                                <br>
+                                Made using PyTesseract, DiscordPy, and Pillow (PIL). Converts words within images into a
+                                string of text.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+
+                <!--Coming Soon-->
+                <a href="https://github.com/RockyLogic" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
+                    <div class="project">
+                        <img src="src/images/python.jpg" alt="Coming Soon" class="projectImage">
+                        <div class="projectDescription">
+                            <p>
+                                <strong>Coming Soon</strong>
+                                <br>
+                                Updating Soon!
+                            </p>
+                        </div>
+                    </div>
+                </a>
+
+
             </div>
         </div>
     </section>
