✔ Finished Contact Footer

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="src/css/home.css" type="text/css">
     <link rel="stylesheet" href="src/css/about.css" type="text/css">
     <link rel="stylesheet" href="src/css/portfolio.css" type="text/css">
+    <link rel="stylesheet" href="src/css/contact.css" type="text/css">
 
 
     <!--Web Page Title-->
@@ -253,6 +254,14 @@
 
             </div>
         </div>
+    </section>
+
+    <!--Contact Footer-->
+    <section id="contact" class="contact">
+        <div><strong>Contact Me:</strong></div>
+        <div><a href="mailto:webmaster@example.com" class="contactLinks"><i class="fa fa-envelope-square fa-md" aria-hidden="true"></i> Email: RockyKuang@hotmail.com</a></div>
+        <a href="https://www.linkedin.com/in/rocky-kuang/ " target="_blank " class="contactLinks "><i class="fa fa-linkedin-square fa-md" aria-hidden="true "></i> Linkedin</a>
+        <a href="https://github.com/RockyLogic " target="_blank " class="contactLinks "><i class="fa fa-github-square fa-md" aria-hidden="true "></i> GitHub</a>
     </section>
 
     <!--Java Script-->
