📚 Added More Projects

--- a/index.html
+++ b/index.html
@@ -225,13 +225,41 @@
                 <!--Discord OCR Bot-->
                 <a href="https://github.com/RockyLogic/Discord-OCR-Bot" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
                     <div class="project">
-                        <img src="src/images/PyTesseract.png" alt="Discord OCR Bot" class="projectImage">
+                        <img src="src/images/OCR.jpeg" alt="Discord OCR Bot" class="projectImage">
                         <div class="projectDescription">
                             <p>
                                 <strong>Discord OCR Bot</strong>
                                 <br>
                                 Made using PyTesseract, DiscordPy, and Pillow (PIL). Converts words within images into a
                                 string of text.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+
+                <!--BootStrap 3 Webpage-->
+                <a href="https://github.com/RockyLogic/Personal-Website" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
+                    <div class="project">
+                        <img src="src/images/bootstrap3.png" alt="Bootstrap3 Webpage" class="projectImage">
+                        <div class="projectDescription">
+                            <p>
+                                <strong>Bootstrap 3 Introduction Page</strong>
+                                <br>
+                                A introduction webpage made with HTML5, CSS3, Bootstrap 3, used Bootstrap's grid and navigation bar features.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+
+                <!--Bootstrap 4 Webpage-->
+                <a href="https://github.com/RockyLogic/Personal-Website-Bootstrap-4" class="col-12 col-md-6 col-lg-4 d-flex justify-content-center align-items-center flex-column" target="_blank">
+                    <div class="project">
+                        <img src="src/images/bootstrap4.png" alt="Bootstrap4 Webpage" class="projectImage">
+                        <div class="projectDescription">
+                            <p>
+                                <strong>Bootstrap 4 Resume Page</strong>
+                                <br>
+                                Resume webpage made with Bootstrap 4, exploring properties such as flexbox, animations, and responsive designs.
                             </p>
                         </div>
                     </div>
