--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                 <!--Right Side of About-->
                 <div class="col-lg-6 d-none d-lg-flex align-items-center">
                     <img class="img-fluid aboutImage" src="src/images/toronto.jpg">
+                    <!--<div class ="img-fluid aboutImage"></div>-->
                 </div>
             </div>
         </div>
@@ -288,7 +289,7 @@
     <section id="contact" class="contact">
         <div><strong>Contact Me:</strong></div>
         <div><a href="mailto:webmaster@example.com" class="contactLinks"><i class="fa fa-envelope-square fa-md" aria-hidden="true"></i> Email: RockyKuang@hotmail.com</a></div>
-        <a href="https://www.linkedin.com/in/rocky-kuang/ " target="_blank " class="contactLinks "><i class="fa fa-linkedin-square fa-md" aria-hidden="true "></i> Linkedin</a>
+        <a href="https://www.linkedin.com/in/rocky-kuang/ " target="_blank " class="contactLinks " style="margin-right: 20px;"><i class="fa fa-linkedin-square fa-md" aria-hidden="true "></i> Linkedin</a>
         <a href="https://github.com/RockyLogic " target="_blank " class="contactLinks "><i class="fa fa-github-square fa-md" aria-hidden="true "></i> GitHub</a>
     </section>
 
