--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
         <div class="container">
 
             <!--Portfolio Title-->
-            <hr style="margin-bottom: 5%;">
-            <h1 class="text-center"><strong>Portfolio</strong></h1>
+            <hr style="margin-bottom: 10%;">
+            <h2 class="text-center"><strong>Portfolio</strong></h2>
             <hr style="margin-bottom:5%; width: 25%">
 
             <!--Projects-->
@@ -300,16 +300,16 @@
             
             <div class="row" style="height: 100vh; width: 100%;">
                 
-                <div class="d-none col-lg-6 d-lg-flex align-items-center" style="height: 100%;">
+                <div class="d-none col-md-6 d-md-flex align-items-center" style="height: 100%;">
                     <img class="img-fluid contactImage" src="src/images/Banksy1.jpg">
                 </div>
 
-                <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center py-3 py-lg-0">
+                <div class="col-12 col-md-6 d-flex justify-content-center align-items-center py-3 py-md-0">
                     <div class="d-lg-flex flex-column justify-content-center ml-lg-5"style="text-align: start; width:600px margin-top:10%;">
                         <h1><strong>How May I Be Of Assistance?</strong></h1>
-                        <hr align="left" style="width: 80%; border: 3px solid; color: rgb(134, 134, 134);">
+                        <hr align="left" style="width: 100%; border: 3px solid; color: rgb(134, 134, 134);">
                         <br>
-                        <h3>If there is anything you need I would be happy to help! I will get back to you as soon as possible.</h3>
+                        <h4>If there is anything you need I would be happy to help! I will get back to you as soon as possible.</h4>
                         <br>
                         <div style="width: 100%;">
                             <a href="mailto:webmaster@example.com" class="contactLinks">
