--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         <h4>If there is anything you need I would be happy to help! I will get back to you as soon as possible.</h4>
                         <br>
                         <div style="width: 100%;">
-                            <a href="mailto:webmaster@example.com" class="contactLinks">
+                            <a href="mailto:Rockykuang@hotmail.com" class="contactLinks">
                                 <i class="fa fa-envelope-square fa-lg" aria-hidden="true"></i> 
                                 Email: RockyKuang@hotmail.com
                             </a>
