--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                 <strong>Discord OCR Bot</strong>
                                 <br>
                                 Made using PyTesseract, DiscordPy, and Pillow (PIL). Converts words within images into a
-                                string of text.
+                                formatted string of text in an embed.
                             </p>
                         </div>
                     </div>
