📢 Added Media & JS Elements

--- a/index.html
+++ b/index.html
@@ -304,29 +304,31 @@
                 </div>
 
                 <div class="col-12 col-md-6 d-flex justify-content-center align-items-center py-3 py-md-0">
-                    <div class="d-lg-flex flex-column justify-content-center ml-lg-5"style="text-align: start; width:600px margin-top:10%;">
-                        <h1><strong>How May I Be Of Assistance?</strong></h1>
-                        <hr align="left" style="width: 100%; border: 3px solid; color: rgb(134, 134, 134);">
-                        <br>
-                        <h4>If there is anything you need I would be happy to help! I will get back to you as soon as possible.</h4>
-                        <br>
-                        <div style="width: 100%;">
-                            <a href="mailto:Rockykuang@hotmail.com" class="contactLinks">
-                                <i class="fa fa-envelope-square fa-lg" aria-hidden="true"></i> 
-                                Email: RockyKuang@hotmail.com
-                            </a>
-                        </div>
-                        <div>
-                            <a href="https://www.linkedin.com/in/rocky-kuang/ " target="_blank" class="contactLinks">
-                                <i class="fa fa-linkedin-square fa-lg" aria-hidden="true "></i> 
-                                Linkedin - Rocky Kuang
-                            </a>
-                        </div>  
-                        <div>
-                            <a href="https://github.com/RockyLogic " target="_blank" class="contactLinks">
-                                <i class="fa fa-github-square fa-lg" aria-hidden="true "></i> 
-                                GitHub - RKuangDev
-                            </a>
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-8 col-md-10 d-lg-flex flex-column"style="text-align: start; width:600px margin-top:10%;">
+                            <h1><strong>How May I Be Of Assistance?</strong></h1>
+                            <hr align="left" style="width: 100%; border: 3px solid; color: rgb(134, 134, 134);">
+                            <br>
+                            <h4>If there is anything you need I would be happy to help! I will get back to you as soon as possible.</h4>
+                            <br>
+                            <div>
+                                <a href="mailto:Rockykuang@hotmail.com" class="contactLinks">
+                                    <i class="fa fa-envelope-square fa-lg" aria-hidden="true"></i> 
+                                    Email<span class="d-none d-md-inline">: RockyKuang@hotmail.com</span>
+                                </a>
+                            </div>
+                            <div>
+                                <a href="https://www.linkedin.com/in/rocky-kuang/ " target="_blank" class="contactLinks">
+                                    <i class="fa fa-linkedin-square fa-lg" aria-hidden="true "></i> 
+                                    Linkedin<span class="d-none d-md-inline"> - Rocky Kuang </span>
+                                </a>
+                            </div>  
+                            <div>
+                                <a href="https://github.com/RockyLogic " target="_blank" class="contactLinks">
+                                    <i class="fa fa-github-square fa-lg" aria-hidden="true "></i> 
+                                    GitHub<span class="d-none d-md-inline"> - RKuangDev</span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -339,6 +341,16 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+    <script>
+        $(function(){
+            $(document).scroll(function(){
+                var $nav = $("#mainNavbar");
+                $nav.toggleClass("scrolled", $(this).scrollTop() > 0);
+                $nav.toggleClass("unscrolled", $(this).scrollTop() < $nav.height());
+            });
+        });
+    </script>
 </body>
 
 </html>
